Prevent the scrollbar in the Settings pages

--- a/extraterm/resources/themes/atomic-dark-ui/bootstrap/_forms.scss
+++ b/extraterm/resources/themes/atomic-dark-ui/bootstrap/_forms.scss
@@ -667,7 +667,7 @@ input[type="text"]:focus, input[type="number"]:focus {
 
   // Make form groups behave like rows
   .form-group {
-    @include make-row;
+    @include make-row(0px);
   }
 
   // Reset spacing and right align labels, but scope to media queries so that
